# Livekit-AI-Voice-Agent

./: README.md
.github/workflows/: ci-cd.yaml
backend/: Dockerfile  agent_worker.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  llm_provider.py  pipeline.py  stt_provider.py  tts_provider.py  vad_provider.py
backend/app/agent/rag/: __init__.py  cache.py  chunker.py  embeddings.py  service.py  vectorstore.py
backend/app/api/: documents.py  health.py  router.py  sessions.py  token.py
backend/app/config/: settings.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  document_service.py  session_service.py  token_service.py
backend/app/utils/: __init__.py  circuit_breaker.py  exceptions.py  logger.py  retry.py
frontend/: Dockerfile  package-lock.json
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: AgentControls.tsx  AudioVisualizer.tsx  DocumentUpload.tsx  TranscriptDisplay.tsx  VoiceAgent.tsx
frontend/src/hooks/: useAgentConnection.ts  useAudioAnalyzer.ts  useLiveKitRoom.ts
frontend/src/services/: api.ts
frontend/src/store/: agentStore.ts
frontend/src/styles/: index.css
frontend/src/types/: index.ts
infra/docker/: .env.example  docker-compose.prod.yml  docker-compose.yml
infra/k8s/: ingress.yaml  namespace.yaml  secrets.yaml
infra/k8s/backend/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
infra/k8s/frontend/: deployment.yaml  service.yaml
scripts/: deploy.sh  ingest-docs.py  setup.sh
(+5 files in other folders)
